Fixed token refresh; initial gmail contacts support
* Fixed bug where Oauth2 access token wasn't being refreshed
* Moved files out of directory/ directly under google/
* Added call to Contacts API to retrieve Google contacts (not fully
  working yet)

--- a/google/CMakeLists.txt
+++ b/google/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(usrben_google oauth2.cpp directory/members.cpp directory/directory.cpp)
+add_library(usrben_google oauth2.cpp directory_members.cpp contacts.cpp)
 target_link_libraries(usrben_google ${Boost_LIBRARIES} cppnetlib-uri cppnetlib-client-connections ssl crypto pthread)
